--- a/5_cv/ukol2.css
+++ b/5_cv/ukol2.css
@@ -1,7 +1,14 @@
+*{
+  padding:0;
+  margin:0;
+}
+
+
 .container {
   display: grid;
   grid-template-columns: 1fr 4fr 1fr;
   grid-template-rows: 0.3fr 0.3fr 1.5fr 0.3fr;
+  margin:0;
 }
 
 .item {
