--- a/5_cv/ukol3.css
+++ b/5_cv/ukol3.css
@@ -1,50 +1,88 @@
-*{
-    margin:0;
-    padding:0;
+* {
+  margin: 0;
+  padding: 0;
 }
 
 .item{
-    padding:3em;
+    padding: 0.2em;
 }
 
-.container{
+.container {
+  display: grid;
+  grid-template-columns: 1fr 5fr;
+  grid-template-rows: 10vh 80vh 10vh;
+  grid-template-areas:
+    "header header"
+    "sidebar cont_main"
+    "footer footer";
+}
+
+
+
+.header {
+  grid-area: header;
+  background-color: rgb(124, 124, 175);
+  display:grid;
+  grid-template-columns: 10vw 1fr 1fr;
+  grid-template-rows: 1fr;
+  align-items: center;
+}
+
+.header img{
+    height: 10vh;
+}
+
+.obrazek{
     display: grid;
-    grid-template-columns: 1fr 5fr;
-    grid-template-rows: 10vh 80vh 10vh ;
-    grid-template-areas: "header header"
-                        "sidebar cont_main"
-                        "footer footer";
+    justify-items: center; 
+
 }
 
 
-.header{
-    grid-area: header;
-    background-color: rgb(124, 124, 175);
-}
 
-.sidebar{
-    grid-area: sidebar;
-    background-color: rgb(202, 202, 135);
-}
-
-.cont_main{
-    grid-area: cont_main;
-    background-color: rgb(23, 144, 144);
+.profile{
     display: grid;
-    padding: 1em;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: auto;
+    justify-items: right;
+    padding-right: 3em;
 }
 
-.item_main{
-    border: 1px solid black;
-    background-color: white;
-    height: 20vh;
-    margin: 1em;
-    border-radius: 10px;
+.profile a{
+    color: red;
+    text-decoration: none;
 }
 
-.footer{
-    grid-area: footer;
-    background-color: rgb(212, 107, 107);
+
+
+.sidebar {
+  grid-area: sidebar;
+  background-color: rgb(202, 202, 135);
+}
+
+.cont_main {
+  grid-area: cont_main;
+  background-color: rgb(23, 144, 144);
+  display: grid;
+  padding: 1em;
+  grid-template-columns: 1fr 1fr;
+  grid-auto-rows: 20vh;
+}
+
+.first_col {
+  grid-column: 1/2;
+}
+
+.second_col {
+  grid-column: 2/-1;
+}
+
+.item_main {
+  border: 1px solid black;
+  background-color: white;
+  margin: 0.5em;
+  border-radius: 10px;
+}
+
+.footer {
+  grid-area: footer;
+  background-color: rgb(212, 107, 107);
 }
