--- a/zapocet/style.css
+++ b/zapocet/style.css
@@ -1,44 +1,635 @@
 :root {
-
     --color-primary: #ff9301;
     --color-heading: #0b0b15;
     --color-text: #555555;
     --color-form-border: #bbbbbb;
     --color-separator: #eeeeee;
     --color-bg: #f7f7ff;
-
     --font-family: 'Roboto', sans-serif;
 }
 
+* {
+    font-family: var(--font-family);
+    padding: 0;
+    margin: 0;
+}
+
+/* barvy */
+.bg--primary {
+    background-color: var(--color-bg);
+}
+
+.bg--secondary {
+    background-color: white;
+}
+
+/* header */
+.header {
+    position: relative;
+    overflow: hidden;
+}
+
+.header::before {
+    content: "";
+    position: absolute;
+    right: -10%;
+    width: 60vw;
+    height: 60vw;
+    border-radius: 50%;
+    background-color: rgba(255, 145, 1, 0.5);
+    z-index: -1;
+}
+
+.header__content {
+    display: flex;
+    max-width: 1140px;
+    margin: 0 auto;
+}
+
+.header__info {
+    flex: 1;
+    padding: 2em;
+}
+
+.header__image {
+    display: flex;
+    flex: 1;
+    justify-content: center;
+    align-items: flex-end;
+}
+
+.header__img {
+    position: relative;
+    height: 95%;
+    width: auto;
+}
+
+.header__pretitle {
+    font-size: 1.2em;
+    font-weight: 400;
+    line-height: 1.5;
+    color: var(--color-heading);
+}
+
+.header__title {
+    margin: 0;
+    padding: 0;
+    font-weight: 900;
+    line-height: 1.1;
+}
+
+.header__title--primary {
+    font-size: 6em;
+    color: var(--color-heading);
+}
+
+.header__title--secondary {
+    font-size: 2em;
+    color: var(--color-primary);
+    line-height: 1.2;
+}
+
+.header__text {}
+
+/* navigace */
+
+.nav {
+    margin: 0;
+    padding: 2em 0;
+}
+
+.nav__list {
+    display: flex;
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
+
+.nav__item {
+    padding: 0 0.5em;
+}
+
+.nav__link {
+    text-decoration: none;
+    color: var(--color-text);
+}
+
+.nav__link:hover {
+    text-decoration: underline var(--color-primary) 3px;
+}
 
 
 
+.container {
+    max-width: 1140px;
+    margin: 0 auto;
+}
 
-.card__image--primary{
+.section--spaced {
+    padding: 2em 0;
+}
+
+.separator {
+    background: url(img/border-dark.png) repeat-x center center;
+    background-size: 150px;
+    height: 8px;
+    max-width: 1140px;
+    margin: 0 auto;
+}
+
+/* hero */
+.container--primary {
+    padding: 3em 0;
+    display: flex;
+    align-items: center;
+}
+
+.container__figure {
+    flex: 1;
+}
+
+.container__biography {
+    flex: 2;
+    padding: 1em;
+}
+
+.card--hero {
+    flex-direction: column;
+    align-items: center;
+}
+
+.card__image--primary {
     background-color: var(--color-primary);
+    flex: 1;
+    width: 15vw;
     border-radius: 50%;
 }
 
-.card__title--primary{
+.card__caption {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.card__title--primary {
+    font-size: 2em;
+    flex: 1;
     font-weight: 900;
 }
 
+.card__title--secondary {
+    flex: 1;
+    color: var(--color-primary);
+    font-weight: 400;
+}
+
+.container__heading {
+    margin: 1em 0;
+    position: relative;
+    display: inline-block;
+    z-index: 1;
+}
+
+.container__heading::before {
+    content: "";
+    position: absolute;
+    top: -4px;
+    left: -6px;
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    background-color: rgba(255, 145, 1, 0.5);
+    z-index: -1;
+}
+
+.container__text {
+    padding: 0 0 1em 0;
+}
+
+.container__paragraph {
+    margin: 1em;
+    color: var(--color-text);
+}
+
+/* služby */
+.container--secondary {
+    display: flex;
+}
+
+.card {
+    flex: 1;
+    flex-direction: column;
+    display: flex;
+    margin: 1em;
+    border-radius: 0.3em;
+}
+
+.card--service {
+    position: relative;
+    overflow: hidden;
+    z-index: 1;
+    padding: 1em;
+    background-color: white;
+}
+
+.card--service::before {
+    content: "";
+    position: absolute;
+    top: -35%;
+    left: -15%;
+    width: 200px;
+    height: 200px;
+    border-radius: 50%;
+    background-color: var(--color-primary);
+    z-index: -1;
+}
+
+.card__icon {
+    margin: 0 1em;
+    width: 60px;
+    height: 60px;
+}
+
+.card__title {
+    margin: 0.5em 1em;
+    margin-top: 1.5em;
+}
+
+.card__text {
+    margin: 0 1em;
+    color: var(--color-text);
+}
 
 
+/* ocenění */
+.container--tertiary {
+    display: flex;
+}
 
-/* extra velké zařízení */
-@media screen and (min-width: 1200px) {}
+.card--award {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 1em;
+    background-color: white;
+}
+
+.card__title--tertiary {
+    margin: 1em;
+    text-align: center;
+}
+
+/* zkušenosti */
+.container--list {
+    flex-direction: column;
+}
+
+.card--experience {
+    background-color: var(--color-bg);
+    border-radius: 0.3em;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    padding: 2em;
+}
+
+.card__side--right {
+    flex: 3;
+    border-left: 2px solid var(--color-separator);
+}
+
+.card__side--left {
+    flex: 1;
+}
+
+.card__period {
+    margin-bottom: 0.5em;
+}
+
+.card__time {
+    font-style: italic;
+    color: var(--color-text);
+}
+
+.card__tag {
+    background-color: var(--color-primary);
+    border-radius: 0.3em;
+    padding: 0.3em;
+    width: 35%;
+    text-align: center;
+    margin: 0.8em 0;
+    color: white;
+}
+
+.card__tag--part_time {
+    background-color: var(--color-text);
+}
 
 
+/* portfolio */
+.container--grid {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    margin: 0 auto;
+}
 
-/* velké zařízení */
-@media screen and (max-width: 1199px) and (min-width: 960px) {}
+.card__image {
+    width: 100%;
+    height: auto;
+    max-width: 100%;
+}
 
+.card__text--portfolio {
+    margin: 1em 0;
+}
 
+.card__date {
+    font-size: 0.7em;
+    color: var(--color-text);
+}
 
-/* středně velké zařízení */
-@media screen and (max-width: 959px) and (min-width: 560px) {}
+.card__title--portfolio {
+    margin: 1em 0;
+    margin-bottom: 0;
+}
 
+/* kontakt */
 
-/* malé zařízení */
-@media screen and (max-width: 559px) and (min-width: 360px) {}
+.container--contact {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 1em 0;
+}
+
+.container--contact-info {
+    flex: 1;
+}
+
+.container--contact-form {
+    flex: 1;
+    padding: 1em;
+}
+
+.info__item {
+    display: flex;
+    align-items: center;
+}
+
+.info__icon {
+    width: 1.5em;
+    height: auto;
+}
+
+.info__text {
+    font-weight: 900;
+    font-size: 1em;
+    color: var(--color-heading);
+    padding: 1em;
+}
+
+.info__text a {
+    text-decoration: none;
+    color: var(--color-heading);
+}
+
+.map__iframe {
+    width: 100%;
+    height: 30vh;
+    border: 0.2em solid white;
+}
+
+.form__group {
+    display: grid;
+    gap: 1em;
+    grid-template-columns: 1fr 1fr;
+    grid-template-areas:
+        "name adres"
+        "subject subject"
+        "comment comment"
+        "button button";
+}
+
+.form__field--name {
+    grid-area: name;
+}
+
+.form__field--email {
+    grid-area: adres;
+}
+
+.form__field--subject {
+    grid-area: subject;
+}
+
+.form__field--comment {
+    grid-area: comment;
+}
+
+.form__field--button {
+    grid-area: button;
+}
+
+.form__input,
+.form__textarea {
+    width: 100%;
+    padding: 1em;
+    border: 1px solid var(--color-form-border);
+    box-sizing: border-box;
+}
+
+.form__button {
+    padding: 1em;
+    color: white;
+    background-color: var(--color-heading);
+    border: 0;
+    border-radius: 0.3em;
+}
+
+/* footer */
+.footer {
+    display: flex;
+    max-width: 1140px;
+    margin: 0 auto;
+    padding: 1em 0;
+    align-items: center;
+}
+
+.social {
+    flex: 1;
+}
+
+.footer__copy {
+    flex: 1;
+    text-align: end;
+}
+
+.social__icon {
+    width: 2em;
+    height: auto;
+}
+
+/* breakpointy */
+@media screen and (min-width: 1200px) {
+    .header::before {
+        top: -50%;
+    }
+}
+
+@media screen and (max-width: 1199px) {
+    .header::before {
+        top: -30%;
+        right: -12;
+    }
+
+    .container,
+    .header__content,
+    .separator,
+    .footer {
+        padding: 0 4vw;
+    }
+}
+
+@media screen and (max-width: 959px) {
+    .header__image {
+        display: none;
+    }
+
+    .header__text {
+        width: 50vw;
+    }
+
+    .header::before {
+        display: none;
+    }
+
+    .container--primary {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .container__figure {
+        flex: 1;
+    }
+
+    .container__biography {
+        flex: 1;
+        padding: 1em;
+    }
+
+    .card__image--primary {
+        background-color: var(--color-primary);
+        flex: 1;
+        width: 30vw;
+        border-radius: 50%;
+    }
+
+    .container--secondary {
+        flex-direction: column;
+    }
+
+    .card--service::before {
+        top: -50%;
+        left: -5%;
+    }
+
+    .separator {
+        margin: 0 4vw;
+    }
+
+    .container--grid {
+        grid-template-columns: 1fr 1fr;
+    }
+
+    .container--contact {
+        flex-direction: column;
+    }
+
+    .card__tag {
+        width: 60%;
+    }
+
+    .container--contact-form,
+    .container--contact-info {
+        width: 100%;
+    }
+}
+
+@media screen and (max-width: 559px) and (min-width: 360px) {
+    .header__title--primary {
+        font-size: 4em;
+    }
+
+    .header__image {
+        display: none;
+    }
+
+    .nav__list {
+        display: grid;
+        justify-content: center;
+        grid-template-columns: 1fr 1fr 1fr;
+    }
+
+    .nav__item {
+        background-color: var(--color-primary);
+        margin: 0.5em;
+        padding: 1em 0;
+        font-size: 0.9em;
+        text-align: center;
+        border-radius: 0.3em;
+    }
+
+    .nav__link {
+        color: var(--color-heading);
+    }
+
+    .card--service::before {
+        top: -40%;
+        left: -10%;
+    }
+
+    .container--tertiary {
+        flex-direction: column;
+    }
+
+    .card--award {
+        flex-direction: row;
+        justify-content: start;
+    }
+
+    .container--grid {
+        grid-template-columns: 1fr;
+    }
+
+    .card--experience {
+        flex-direction: column;
+        align-items: start;
+    }
+
+    .card__side--right {
+        border-left: 0px;
+    }
+
+    .card__title,
+    .card__text {
+        margin-left: 0;
+    }
+
+    .form__group {
+        grid-template-columns: 1fr;
+        grid-template-areas:
+            "name"
+            "adres"
+            "subject"
+            "comment"
+            "button";
+    }
+
+    .footer {
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        padding: 1em;
+    }
+}
