--- a/zapocet/style.css
+++ b/zapocet/style.css
@@ -12,6 +12,7 @@
     font-family: var(--font-family);
     padding: 0;
     margin: 0;
+    line-height: 1.5;
 }
 
 /* barvy */
@@ -89,13 +90,15 @@
     line-height: 1.2;
 }
 
-.header__text {}
+.container__subheading{
+    margin: 1em 0;
+}
 
 /* navigace */
 
 .nav {
     margin: 0;
-    padding: 2em 0;
+    padding: 4em 0 0 0;
 }
 
 .nav__list {
@@ -106,7 +109,8 @@
 }
 
 .nav__item {
-    padding: 0 0.5em;
+    padding: 0 1em 0 0;
+
 }
 
 .nav__link {
@@ -139,7 +143,7 @@
 
 /* hero */
 .container--primary {
-    padding: 3em 0;
+    padding: 2em 0;
     display: flex;
     align-items: center;
 }
@@ -480,7 +484,7 @@
 @media screen and (max-width: 1199px) {
     .header::before {
         top: -30%;
-        right: -12;
+        right: -12%;
     }
 
     .container,
