--- a/7_cv/ukol3.css
+++ b/7_cv/ukol3.css
@@ -1,6 +1,6 @@
 .container{
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: repeat(auto-fill, minmax(100px, 1fr)); 
     margin: 0 auto;
 }
 
