--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+/* style.css */
 :root {
     --primary-color: #4646e9;
     --bg-color: #dad9d9;
@@ -13,6 +14,8 @@
 
 body {
     background-color: var(--bg-color);
+    background-image: url(img/main_bg.png);
+    background-position: calc(50% - 11.2797px) calc(50% + 5.29479px);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -26,15 +29,50 @@ body {
     width: 85vw;
     height: 70vh;
     max-width: 1300px;
-    background-color: var(--primary-color);
+    background: linear-gradient(#0b7080, #0ba376);
     border-radius: 2em;
     overflow: hidden;
 }
 
 .small {
+    padding: 2em;
     flex: 1;
-    border-top-left-radius: 2em;
-    border-bottom-left-radius: 2em;
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+    align-items: center;
+}
+
+.hero,
+.social,
+.tlacitko {
+    flex: 1;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    color: white;
+}
+
+.hero {
+    padding: 2em;
+    gap: 1em;
+    flex-direction: column;
+}
+
+.social {
+    font-size: 2em;
+    flex-direction: row;
+    gap: 0.2em;
+}
+
+.me {
+    width: 150px;
+    height: 150px;
+    border-radius: 50%;
+    object-fit: cover;
+    border: 3px solid var(--bg-color);
+    object-position: center top;
 }
 
 .big {
@@ -59,14 +97,7 @@ body {
     background: var(--slide-bg);
     border-top-left-radius: 1em;
     border-bottom-left-radius: 1em;
-
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
     padding: 2em;
-    text-align: center;
-
     font-size: 1.5em;
     transform-origin: center;
     transform-style: preserve-3d;
@@ -78,17 +109,29 @@ body {
     -webkit-overflow-scrolling: touch;
 }
 
+.home {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+
+.home-mobile {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+
 .slide.active {
     transform: rotateY(0deg);
     z-index: 2;
-}
-
-
-img {
-    max-width: 100%;
-    height: auto;
-    border-radius: 0.5em;
-    margin-top: 1em;
 }
 
 .card {
@@ -105,46 +148,9 @@ img {
     color: #fff;
 }
 
-table {
-    width: 80%;
-    border-collapse: collapse;
-    margin-top: 1em;
-}
-
-th,
-td {
-    border: 1px solid #333;
-    padding: 0.5em 1em;
-}
-
-ul {
-    list-style: disc inside;
-    margin-top: 1em;
-    text-align: left;
-}
-
-form {
-    display: flex;
-    flex-direction: column;
-    gap: 0.5em;
-    width: 80%;
-    margin-top: 1em;
-}
-
-input {
-    padding: 0.5em;
-    border: 1px solid #ccc;
-    border-radius: 0.3em;
-}
-
-button {
-    padding: 0.7em;
-    border: none;
-    border-radius: 0.3em;
-    background: var(--primary-color);
-    color: white;
-    font-size: 1em;
-    cursor: pointer;
+/* desktop: .hero-mobile schováme */
+.hero-mobile {
+    display: none;
 }
 
 button:hover {
@@ -184,14 +190,20 @@ button:hover {
 }
 
 @media screen and (max-width: 959px) {
-
     body {
+        flex-direction: column;
+    }
+
+    .hero {
+        display: flex;
+        padding: 2em;
+        gap: 1em;
         flex-direction: column;
     }
 
     .container {
         width: 100vw;
-        height: 92%;
+        height: 100vh;
         flex-direction: column;
         border-radius: 0;
     }
@@ -203,10 +215,35 @@ button:hover {
     .slide,
     .big {
         border-radius: 0;
+        
+    }
+
+    /* Zobrazit a stylovat hero-mobile */
+    .hero-mobile {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        padding: 2em;
+        width: 100%;
+        color: white;
+    }
+
+    .home {
+        border-top-left-radius: 2em;
+        border-top-right-radius: 2em;
+        background-color: white;
+    }
+
+    #slide-1 {
+        background:linear-gradient(to right, #0b7080, #0ba376);
+        padding: 0;
     }
 
     /* Upravená navigace pro mobil */
     .nav {
+        position: fixed;
+        bottom: 0;
         width: 100vw;
         height: 8%;
         margin: 0;
@@ -216,12 +253,12 @@ button:hover {
         display: flex;
         flex-direction: row;
         justify-content: space-evenly;
-        /* rozprostře položky rovnoměrně */
         align-items: center;
         border-top: 1px solid black;
+        background-color: white;
+        z-index: 1000;
     }
 
-    /* Každý odkaz zabírá stejný podíl a je vystředěný */
     .nav a {
         flex: 1;
         text-align: center;
