--- a/style.css
+++ b/style.css
@@ -227,8 +227,12 @@ button:hover {
         padding: 2em;
         width: 100%;
         color: white;
+
     }
 
+    .social{
+        margin-top: 0.3em;
+    }
     .home {
         border-top-left-radius: 2em;
         border-top-right-radius: 2em;
@@ -240,7 +244,6 @@ button:hover {
         padding: 0;
     }
 
-    /* Upravená navigace pro mobil */
     .nav {
         position: fixed;
         bottom: 0;
@@ -254,9 +257,12 @@ button:hover {
         flex-direction: row;
         justify-content: space-evenly;
         align-items: center;
-        border-top: 1px solid black;
         background-color: white;
         z-index: 1000;
+        box-shadow: 1px -2px 5px rgba(0, 0, 0, 0.1);
+        border-top-left-radius: 2em;
+        border-top-right-radius: 2em;
+        border-radius: 2em;
     }
 
     .nav a {
