--- a/style.css
+++ b/style.css
@@ -190,18 +190,64 @@ body {
     z-index: 2;
 }
 
-.card {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    gap: 1em;
+.slide-container {
     width: 100%;
+    height: 100%;
 }
 
-.card-item {
-    background: var(--card-bg);
+.heading-in {
+    position: relative;
+    display: inline;
+    color: var(--primary-color);
+
+    grid-column: 1/-1;
+}
+
+.heading-in::after {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 50%;
+    height: 2px;
+    background: linear-gradient(to right, var(--primary-color), transparent);
+    transform-origin: left;
+    transform: scaleX(0.5);
+    transition: transform 0.5s ease-in-out;
+}
+
+
+
+
+
+
+.container-in {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+    gap: 1em;
+}
+
+
+.card-study {
+    margin: 1em;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    border: 1px solid var(--primary-color);
+    border-radius: 2em;
     padding: 1em;
-    border-radius: 0.5em;
-    color: #fff;
+    gap: 1em;
+    box-shadow: 2px -3px 6px rgba(0, 0, 0, 0.25);
+    text-align: center;
+}
+
+.card-logo {
+    width: auto;
+    height: 100px;
+    max-width: 100%; /* Zajistí, že obrázek nepřesáhne šířku rodiče */
+    height: auto; /* Zachová poměr stran při zmenšování */
+    object-fit: contain; /* Přizpůsobí obrázek bez oříznutí */
 }
 
 /* desktop: .hero-mobile schováme */
@@ -390,4 +436,13 @@ button:hover {
     }
 
 
+}
+
+@media screen and (max-width: 559px) {
+    .container-in {
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: auto;
+
+    }
 }
