--- a/style.css
+++ b/style.css
@@ -333,6 +333,17 @@ button:hover {
     font-weight: bold;
 }
 
+.btn{
+    text-align: center;
+    padding: 1em;
+    border-radius: 2em;
+    background-color: transparent;
+    border: 1px solid var(--slide-bg);
+    color: white;
+    text-decoration: none;
+    font-size: 1.2rem;
+}
+
 @media screen and (max-width: 1199px) {
     .big {
         flex: 2;
