--- a/zapocet/style.css
+++ b/zapocet/style.css
@@ -7,6 +7,8 @@
   --color-separator: #eeeeee;
   --color-bg: #f7f7ff;
   --font-family: 'Roboto', sans-serif;
+  --color-bg-primary: rgba(255, 145, 1, 0.5);
+  --color-brightest: white;
 }
 
 * {
@@ -21,7 +23,7 @@
 }
 
 .bg--secondary {
-  background-color: white;
+  background-color: var(--color-brightest);
 }
 
 /* Header */
@@ -33,20 +35,22 @@
 .header::before {
   content: "";
   position: absolute;
+  top: -50%;
   right: -10%;
   width: 60vw;
   height: 60vw;
   border-radius: 50%;
-  background-color: rgba(255, 145, 1, 0.5);
+  background-color: var(--color-bg-primary);
   z-index: -1;
 }
+
 
 .header__content {
   display: flex;
 }
 
 .header__info {
-  padding: 2em;
+  padding: 2em 0;
 }
 
 .header__preheading {
@@ -98,14 +102,21 @@
   padding: 0 1em 0 0;
 }
 
+.text--secondary {
+  color: var(--color-text);
+}
+
 .nav__link {
   text-decoration: none;
   color: var(--color-text);
+
+  white-space: nowrap;
+
 }
 
 .nav__link:hover {
   text-decoration: underline var(--color-primary) 3px;
-  text-underline-offset: 0.5em; 
+  text-underline-offset: 5px;
 }
 
 /* Layout a kontejnery */
@@ -119,15 +130,20 @@
 
 .container {
   display: flex;
+  gap: 1em;
 }
 
 .container--spaced {
-  padding: 2em 0;
+  padding: 0 0 2em 0;
 }
 
 .container--primary {
-  padding: 2em 0;
+  padding: 2em 0 0 0;
+  margin: 1em 0 0 0;
+  gap: 4em;
 }
+
+
 
 .container--item {
   display: flex;
@@ -139,6 +155,7 @@
   background: url(img/border-dark.png) repeat-x center center;
   background-size: 150px;
   height: 8px;
+  margin: 2em 0;
 }
 
 /* Padding */
@@ -150,6 +167,12 @@
   padding: 1em;
 }
 
+.padding--bottom{
+  padding-bottom: 2em;
+}
+
+
+
 /* Card*/
 .card--center {
   align-items: center;
@@ -159,7 +182,6 @@
 .card {
   display: flex;
   flex-direction: column;
-  margin: 1em;
   border-radius: 0.3em;
 }
 
@@ -172,7 +194,7 @@
 }
 
 .card__part--small,
-.flex__small-item {
+.container__small-item {
   flex: 1;
 }
 
@@ -212,7 +234,7 @@
   overflow: hidden;
   z-index: 1;
   padding: 1em;
-  background-color: white;
+  background-color: var(--color-brightest);
 }
 
 .card--decorated::before {
@@ -228,12 +250,9 @@
 }
 
 .card__icon {
+  margin: 0 1em;
   width: 60px;
   height: 60px;
-  margin: 0em;
-  position: relative;
-  z-index: 1;
-  margin-left: 1em;
 }
 
 .card__heading--tertiary {
@@ -268,7 +287,7 @@
   width: 35%;
   text-align: center;
   margin: 0.8em 0;
-  color: white;
+  color: var(--color-brightest);
 }
 
 .card__tag--highlighted {
@@ -297,10 +316,12 @@
 
 /* Headings a texty */
 .container__heading {
-  margin: 1em 0;
   position: relative;
   display: inline-block;
   z-index: 1;
+  margin-bottom: 1em;
+  padding-top: ;
+  
 }
 
 .container__heading::before {
@@ -311,8 +332,16 @@
   width: 30px;
   height: 30px;
   border-radius: 50%;
-  background-color: rgba(255, 145, 1, 0.5);
+  background-color: var(--color-bg-primary);
   z-index: -1;
+}
+
+.section__spaced--normal{
+  margin: 1em 0 0 0;
+}
+
+.section__spaced--large{
+  margin: 4vw 0 0 0;
 }
 
 .container__text--primary {
@@ -333,6 +362,7 @@
   height: auto;
 }
 
+
 .container__text--secondary {
   font-weight: 900;
   color: var(--color-heading);
@@ -347,7 +377,13 @@
 .embed--responsive {
   width: 100%;
   height: 30vh;
-  border: 0.2em solid white;
+  border: 0.2em solid var(--color-brightest);
+  filter: grayscale(100%);
+
+}
+
+.embed {
+  padding: 1em 0;
 }
 
 .form__group {
@@ -388,7 +424,7 @@
 .form__button {
   grid-area: button;
   padding: 1em;
-  color: white;
+  color: var(--color-brightest);
   background-color: var(--color-heading);
   border: 0;
   border-radius: 0.3em;
@@ -402,12 +438,21 @@
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
   margin: 0 auto;
+  gap: 1em
+}
+
+.container__heading--secondary {
+  margin: 0;
 }
 
 .footer {
   display: flex;
-  padding: 1em 0;
+  padding: 1em;
   align-items: center;
+}
+
+.padding--small--left {
+  padding: 0 1em;
 }
 
 .footer__copy {
@@ -420,15 +465,11 @@
 }
 
 /* Media Queries */
-@media screen and (min-width: 1200px) {
-  .header::before {
-    top: -50%;
-  }
-}
+
 
 @media screen and (max-width: 1199px) {
   .header::before {
-    top: -30%;
+    top: -20%;
     right: -12%;
   }
 
@@ -437,7 +478,9 @@
   .separator,
   .footer {
     padding: 0 4vw;
+
   }
+
 }
 
 @media screen and (max-width: 959px) {
@@ -450,18 +493,15 @@
   .container,
   .container--primary {
     flex-direction: column;
+    gap:1em;
   }
 
   .card--decorated::before {
     top: -70px;
     left: -25px;
-    width: 170px;
-    height: 170px;
   }
 
-  .separator {
-    margin: 0 4vw;
-  }
+
 
   .container--row {
     flex-direction: row;
@@ -470,6 +510,33 @@
   .card__tag {
     width: 60%;
   }
+
+  .card__image--primary {
+    width: 50%;
+
+  }
+
+
+
+
+
+  .footer {
+    margin: 1em 0;
+  }
+
+
+  .padding--large {
+    padding: 1em;
+  }
+
+  .container__heading {
+    margin: 1em 0 0 0;
+  }
+
+  .text--secondary {
+    width: 50%;
+  }
+
 }
 
 @media screen and (max-width: 559px) {
@@ -477,19 +544,27 @@
     font-size: 4em;
   }
 
+
+
+
+
   .border-left-solid {
     border: 0;
+  }
+  .separator{
+    margin: 0.5em 0;
   }
 
   .nav {
     display: grid;
     justify-content: center;
     grid-template-columns: repeat(3, 1fr);
+    gap:1em;
+    padding:0;
   }
 
   .nav__item {
     background-color: var(--color-primary);
-    margin: 0.5em;
     padding: 1em 0;
     font-size: 0.9em;
     text-align: center;
@@ -504,10 +579,6 @@
     flex-direction: column;
   }
 
-  .card--decorated::before {
-    top: -70px;
-    left: -25px;
-  }
 
   .container--sm--column {
     flex-direction: column;
@@ -516,6 +587,10 @@
   .card--secondary {
     flex-direction: row;
     justify-content: start;
+  }
+
+  .card--primary {
+    padding: 1em;
   }
 
   .card--primary {
@@ -542,5 +617,10 @@
     align-items: center;
     justify-content: center;
     padding: 1em;
+  }
+
+  .text--secondary{
+    margin: 1em 0;
+    width: 100%;
   }
 }
